# Movie-Recommendation-System

./: DeepFM_MovieRecommendation.ipynb  Jenkinsfile  README.md  data.ipynb  data_api.ipynb  inference.py  requirements.txt
AWS_RecSys/: DAG.py  Dockerfile  Train_Data.py  Train_SVD.py  Train_SVD_SageMaker.py  data_kafka_stream.ipynb  fetch_api.py  performance_metrics.txt  rds_CreateTable.py  rds_Kafka.py  requirements.txt  test.py  train_data.csv
Milestone1-Data&Model/: data.ipynb
Milestone4-Security&Fairness&Feedback/: Jenkinsfile  poisoning.ipynb  pyproject.toml  requirements.txt
Milestone4-Security&Fairness&Feedback/flaskr/: __init__.py
Milestone4-Security&Fairness&Feedback/flaskr/data/data_drift_visualization/: rate_log_10_days_ago.csv  rate_log_14_days_ago.csv  rate_log_3_days_ago.csv
Milestone4-Security&Fairness&Feedback/flaskr/data/model/: knn_model.joblib  recommendations.csv
Milestone4-Security&Fairness&Feedback/flaskr/data/telemetry_set/: watch_log_3_days_ago.csv  watch_log_4_days_ago.csv
Milestone4-Security&Fairness&Feedback/flaskr/offlineeval/: offline_eval.py
Milestone4-Security&Fairness&Feedback/flaskr/offlineeval/data/: rate_log_ts.csv
Milestone4-Security&Fairness&Feedback/flaskr/onlinetesting/: feedback_loop.ipynb
Milestone4-Security&Fairness&Feedback/flaskr/trainingdata/: fetch_training_data.py
Milestone4-Security&Fairness&Feedback/flaskr/trainmodel/: prepare.py  train.py
Milestone4-Security&Fairness&Feedback/flaskr/userdata/: fetch_more_user_data.py
Milestone4-Security&Fairness&Feedback/tests/: test_api.py  test_prepare.py
(+75 files in other folders)
